--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alumnus.speechaudioanalysis">
 
+    <uses-sdk android:minSdkVersion="23"
+        android:targetSdkVersion="26"
+        android:maxSdkVersion="26" />
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,10 +22,6 @@
         </activity>
     </application>
 
-    <uses-sdk android:minSdkVersion="23"
-        android:targetSdkVersion="26"
-        android:maxSdkVersion="26" />
-
     <supports-screens android:resizeable="true"
     android:smallScreens="true"
     android:normalScreens="true"
@@ -33,5 +33,7 @@
     android:compatibleWidthLimitDp="integer"
     android:largestWidthLimitDp="integer"
     -->
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
 </manifest>
