--- a/tardosDSPPitchExample/app/src/main/AndroidManifest.xml
+++ b/tardosDSPPitchExample/app/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.alumnus.tardosDspPitchExample.app" />
+    package="com.alumnus.tardosDspPitchExample.app" >
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+</manifest>
