--- a/DialogflowExample/app/src/main/AndroidManifest.xml
+++ b/DialogflowExample/app/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.sushovan.dialogflowexample.app" />
+    package="com.example.sushovan.dialogflowexample.app" >
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    
+</manifest>
