--- a/DialogflowExample/base/build.gradle
+++ b/DialogflowExample/base/build.gradle
@@ -23,9 +23,14 @@ android {
 }
 
 dependencies {
-    api 'com.android.support:appcompat-v7:26.1.0'
-    api 'com.android.support:design:26.1.0'
+    api 'com.android.support:appcompat-v7:27.0.0'
+    api 'com.android.support:design:27.0.0'
     api 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'ai.api:sdk:2.0.7@aar'
+    //compile project(':ailib')
+
     application project(':app')
     feature project(':chatbot')
 }
