added some more google based extern libraries in dependencies for chatbot

--- a/DialogflowExample/base/build.gradle
+++ b/DialogflowExample/base/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'ai.api:sdk:2.0.7@aar'
+    compile 'ai.api:libai:1.6.12'
     //compile project(':ailib')
 
     application project(':app')
