--- a/DialogflowExample/chatbot/src/main/AndroidManifest.xml
+++ b/DialogflowExample/chatbot/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sushovan.dialogflowexample.chatbot">
 
-    <application>
+    <application
+        android:name=".AIApplication"
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -23,6 +28,69 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.example.sushovan.dialogflowexample.chatbot.AIButtonSampleActivity"
+            android:label="@string/title_activity_aibutton_sample"
+            android:parentActivityName="com.example.sushovan.dialogflowexample.chatbot.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.sushovan.dialogflowexample.chatbot.MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".AIServiceSampleActivity"
+            android:label="@string/title_activity_aiservice_sample"
+            android:parentActivityName="com.example.sushovan.dialogflowexample.chatbot.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.sushovan.dialogflowexample.chatbot.MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".AIDialogSampleActivity"
+            android:label="@string/title_activity_aidialog_sample"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.sushovan.dialogflowexample.chatbot.MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".AISettingsActivity"
+            android:label="@string/action_settings"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.sushovan.dialogflowexample.chatbot.MainActivity" />
+        </activity>
+
+        <!--<activity
+            android:name=".AIWidgetActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Base.Theme.AppCompat.Dialog">
+
+        </activity>-->
+
+        <activity
+            android:name=".AITextSampleActivity"
+            android:label="@string/title_activity_aitext_sample"
+            android:parentActivityName="com.example.sushovan.dialogflowexample.chatbot.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.sushovan.dialogflowexample.chatbot.MainActivity" />
+        </activity>
+
+        <!--<receiver android:name=".AISampleAppWidget" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/ai_app_widget_info" />
+        </receiver>-->
+
     </application>
 
 </manifest>
