--- a/DialogflowExample/chatbot/src/main/AndroidManifest.xml
+++ b/DialogflowExample/chatbot/src/main/AndroidManifest.xml
@@ -2,12 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sushovan.dialogflowexample.chatbot">
 
-    <application
-        android:name=".AIApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+    <application android:name=".AIApplication"                                              >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
